<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pace Calculator</string>
    <string name="title_section1">Run</string>
    <string name="title_section2">Bike</string>
    <string name="title_section3">Swim</string>
    <string name="title_section4">Bike (km)</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="instructions">Help</string>
    
    <string name="hourName">Hour</string>
    <string name="minsName">Mins</string>
    <string name="secsName">Secs</string>
    <string name="hh">hh</string>
    <string name="mm">mm</string>
    <string name="ss">ss</string>
    <string name="km">km</string>
    <string name="mile">mile</string>
    <string name="milesSpeedName">Speed (mph)</string>
    <string name="kph">kph</string>
    <string name="mph">mph</string>
    <string name="metres">metres</string>
    <string name="kmSpeedName">Speed (kph)</string>
    <string name="PaceMilesDistance">Enter distance - miles</string>
    <string name="PaceKmDistance">Enter distance - kilometres</string>
    <string name="calcTimeButton">Get Time</string>
    <string name="calcDistButton">Get Dist</string>
    <string name="calcPaceButton">Get Pace</string>
    <string name="calcSpeedButton">Get Speed</string>
    <string name="dist_prompt">Choose a measure</string>
	<string name="Presets">Presets</string>
	<string name="clearButtonText">Clear fields</string>
    <string name="runConversionButton1">Kms (switch to miles)</string>
    <string name="runConversionButton2">Miles (switch to kms)</string>
    <string name="bikeConversionButton1">Kms (switch to miles)</string>
	<string name="bikeConversionButton2">Miles (switch to kms)</string>
    <string name="swimConversionButton1">Metres (switch to yards)</string>
    <string name="swimConversionButton2">Yards (switch to metres)</string>
    <string name="helpText">Add 2 values to get 3rd (e.g. time and dist to get pace)</string>
    <string name="helpTextBike">Add 2 values to get 3rd (e.g. time and dist to get speed)</string>
    <string name="Dismiss">Dismiss</string>
    	
    
    <color name="white">#FFFFFF</color>
	<color name="darkgreen">#2A5F00</color>
	<color name="red">#CC0000</color>
	<color name="darkGrey">#5A5A5A</color>
	<color name="darkGrey2">#6E6F6F</color>
	<color name="lightGreen">#CCCC99</color>
	<color name="lightOrange">#FF9933</color>
	<color name="lightBlue">#3399CC</color>
	
</resources>