<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PaceMilesLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightOrange" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Topline01"
                    style="@style/PrimaryLabelStyle"
                    android:layout_marginLeft="3dip"
                    android:text="@string/hourName" />

                <TextView
                    android:id="@+id/Topline02"
                    style="@style/PrimaryLabelStyle"
                    android:text="@string/minsName" />

                <TextView
                    android:id="@+id/Topline03"
                    style="@style/PrimaryLabelStyle"
                    android:text="@string/secsName" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/EditText01a"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="" />

                <EditText
                    android:id="@+id/EditText01b"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="" />

                <EditText
                    android:id="@+id/EditText01c"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:text="" />

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/calcTimeButton"
                    android:textSize="12sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightOrange" >

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Midline1"
                    style="@style/SecondaryLabelStyle"
                    android:layout_marginLeft="3dip"
                    android:text="@string/PaceKmDistance" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/EditText02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:width="100dip" />

                <Spinner
                    android:id="@+id/SpinnerMetric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/Presets" />

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:text="@string/calcDistButton"
                    android:textSize="12sp"
                    android:width="100dip" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/PTableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightOrange" >

            <LinearLayout
                android:id="@+id/LinearLayout06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/bottomline1b"
                    style="@style/SecondaryLabelStyle"
                    android:layout_marginLeft="3dip"
                    android:text="@string/kmSpeedName" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/EditText03a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:text=""
                    android:width="100dip" />

                <TextView
                    android:id="@+id/filler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" 
                    android:width="100dip"/>

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/calcSpeedButton"
                    android:textSize="12sp"
                    android:width="100dip" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/ClearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/clearButtonText"
                    android:textSize="12sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false" >

                <ListView
                    android:id="@+id/SpeedKmListView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>