<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PaceMilesLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/Topline01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dip"
                    android:text="Options >>" />
                
                <ToggleButton 
    android:id="@+id/togglebutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textOff="Imperial (switch to kms)"
    android:textOn="Metric (switch to miles)"
    />
                

                <!-- 

                <Button
                    android:id="@+id/ButtMetric"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Metric"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/ButtImperial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Imperial"
                    android:textSize="12sp" />
                     -->

                <!--
                <TextView
                    android:id="@+id/Topline01"
                    style="@style/PrimaryLabelStyle"
                    android:layout_marginLeft="3dip"
                    android:text="@string/hourName" />

                <TextView
                    android:id="@+id/Topline02"
                    style="@style/PrimaryLabelStyle"
                    android:text="@string/minsName" />

                <TextView
                    android:id="@+id/Topline03"
                    style="@style/PrimaryLabelStyle"
                    android:text="@string/secsName" />
                -->

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" >

                <EditText
                    android:id="@+id/EditText01a"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="hh"
                    android:inputType="number"
                    android:maxLength="2" />

                <EditText
                    android:id="@+id/EditText01b"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="mm"
                    android:inputType="number"
                    android:maxLength="2" />

                <EditText
                    android:id="@+id/EditText01c"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="ss"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/calcTimeButton"
                    android:textSize="12sp" />
            </LinearLayout>
        </TableRow>

        <!--
        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen" >

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Midline1"
                    style="@style/SecondaryLabelStyle"
                    android:layout_marginLeft="3dip"
                    android:text="@string/PaceMilesDistance" />
            </LinearLayout>
        </TableRow>
        -->

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" >

                <EditText
                    android:id="@+id/EditText02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="kms"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:width="100dip" />

                <Spinner
                    android:id="@+id/spinnerrun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/Presets" />

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:text="@string/calcDistButton"
                    android:textSize="12sp"
                    android:width="100dip" />
            </LinearLayout>
        </TableRow>

        <!-- <TableRow
            android:id="@+id/PTableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen" >

            <LinearLayout
                android:id="@+id/LinearLayout06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/bottomline1b"
                    style="@style/PrimaryLabelStyle"
                    android:layout_marginLeft="3dip"
                    android:text="@string/hourName" />

                <TextView
                    android:id="@+id/bottomline2b"
                    style="@style/PrimaryLabelStyle"
                    android:text="@string/minsName" />

                <TextView
                    android:id="@+id/bottomline3b"
                    style="@style/PrimaryLabelStyle"
                    android:text="@string/secsName" />
            </LinearLayout>
        </TableRow>
         -->

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/EditText03a"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="hh" />

                <EditText
                    android:id="@+id/EditText03b"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="mm" />

                <EditText
                    android:id="@+id/EditText03c"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:hint="ss" />

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/calcPaceButton"
                    android:textSize="12sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/ClearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/clearButtonText"
                    android:textSize="12sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false" >

                <ListView
                    android:id="@+id/ListViewRun"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>